--- a/app/_components/Features/index.module.css
+++ b/app/_components/Features/index.module.css
@@ -1,6 +1,12 @@
 
+.feature_title {
+    color: var(--feature-title);
+    line-height: 1.3;
+}
+
 .feature_text {
-    color: var(--hero-text);
+    color: var(--feature-text);
+    line-height: 1.7;
 }
 
 /* by Kevin Powell (https://github.com/kevin-powell/fem-manage-landing-page-part-8) */
@@ -18,7 +24,7 @@
     display: grid;
     position: relative;
     align-items: center;
-    column-gap: 1rem;
+    column-gap: .5rem;
     grid-template-columns: min-content 1fr;
 }
 
@@ -26,13 +32,24 @@
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     line-height: 1;
+    color: var(--feature-title);
+    font-size: 1rem;
+    font-weight: 700;
 }
 
 .numbered_items p {
     grid-column: 1 / -1;
+    color: var(--feature-text);
+    font-size: .875rem;
+    line-height: 1.8;
 }
 
 @media (min-width: 30em) {
+
+    .numbered_items div {
+        column-gap: 2rem;
+    }
+
     .numbered_items p {
         grid-column: 2 / -1;
     }
