--- a/app/_components/Testimonials/index.module.css
+++ b/app/_components/Testimonials/index.module.css
@@ -3,6 +3,11 @@
     background-color: var(--testimonial-bg);
 }
 
+.testimonial_title {
+    color: var(--feature-title);
+    line-height: 1.3;
+}
+
 .testimonial_text {
     color: var(--testimonial-text);
 }
