--- a/app/css/globals.css
+++ b/app/css/globals.css
@@ -57,9 +57,51 @@ header, main, footer, section {
   display: flow-root;
 }
 
+
+.mobile_menu {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  border-radius: 8px;
+  background-color: white;
+  top: 40px;
+  left: 50%;
+  width: 325px;
+  height: 240px;
+  margin-inline: auto;
+  transform: translate(-50%, 25%);
+}
+
+.mobile_menu .nav_list {
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.mobile_menu .nav_item {
+  margin-inline: auto !important;
+  color: var(--darkBlue);
+  font-weight: 700;
+}
+
+.mobile_menu .nav_link:hover,
+.mobile_menu .nav_link:focus-visible {
+  color: var(--nav-link);
+}
+
+.nav_link:hover,
+.nav_link:focus-visible {
+    color: var(--nav-link);
+}
+
+
 #hero {
   background-image: 
-    url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="814" height="814"><rect width="436" height="970" x="774" y="-62" fill="%23FFF0EC" fill-rule="evenodd" rx="218" transform="rotate(45 718.814 -291.157)"/></svg>');
+    url("../images/bg-tablet-pattern.svg");
   background-size: 300px;
   background-position: top 410px right -170px;
   background-repeat: no-repeat;
@@ -105,6 +147,16 @@ header, main, footer, section {
   grid-template-columns: 1fr;
 }
 
+.swiper-wrapper {
+  display: flow-root;
+}
+
+.swiper-pagination {
+  margin-top: 30px;
+  position: relative;
+}
+
+
 /* lg: 61em */
 @media screen and (min-width: 48em) {
   
@@ -124,7 +176,8 @@ header, main, footer, section {
     width: 660px;
     top: 300px;
     left: -360px;
-    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="814" height="814"><rect width="436" height="970" x="774" y="-62" fill="%23FFF0EC" fill-rule="evenodd" rx="218" transform="rotate(45 718.814 -291.157)"/></svg>');
+    background-image: 
+      url("../images/bg-tablet-pattern.svg");
     background-size: 660px;
     background-position: center top;
     background-repeat: no-repeat;
@@ -153,7 +206,6 @@ header, main, footer, section {
     grid-template-rows: 2fr;
     grid-template-columns: min-content auto min-content;
   }
-
 }
 
 
